# GLADE

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  README.md  REUSE.toml  notes.org  pce-analysis.md  pixi.toml  pyproject.toml  ruff.toml
LICENSES/: ISC.txt
config/: bioenergy.yaml  biomass.yaml  biomass_scenarios.yaml  carbon_dial_surrogate.yaml  central.yaml  constrained.yaml  consumer_values.yaml  consumer_values_scenarios.yaml  consumer_values_with_GHGs.yaml  consumer_values_with_GHGs_scenarios.yaml  cost_calibration.yaml  cost_test.yaml  cropland_sensitivity.yaml  current_yields.yaml  data_bundle.yaml  default.yaml  doc_figures.yaml  doc_figures_scenarios.yaml  europe.yaml  example.yaml  ghg.yaml  ghg_biomass.yaml  ghg_biomass_scenarios.yaml  ghg_scenarios.yaml  ghg_sensitivity_fixed_diet.yaml  ghg_sensitivity_flexible_diet.yaml  ghg_yll.yaml  ghg_yll_grid.yaml  ghg_yll_grid_scenarios.yaml  ghg_yll_scenarios.yaml  global_sensitivity.yaml  global_sensitivity_scenarios.yaml  grid_sensitivity_scenarios.yaml  gsa.yaml  gsa_fixed_diet.yaml  gsa_l1.yaml  gsa_reforest.yaml  health_resolution_sensitivity.yaml  healthy_sustainable.yaml  opt.yaml  (+15 more)
data/: DATASETS.md
docs/: .gitignore  Makefile  README.md  about.rst  analysis.rst  calibration.rst  carbon_price_dial.rst  changelog.rst  cluster_execution.rst  conf.py  configuration.rst  consumer_values.rst  costs.rst  crop_production.rst  current_diets.rst  data_sources.rst  development.rst  environment.rst  food_processing.rst  health.rst  index.rst  introduction.rst  land_use.rst  livestock.rst  model_framework.rst  nutrition.rst  publications.rst  results.rst  sensitivity_analysis.rst  surrogate_modelling.rst  tutorial.rst  validation.rst  water.rst  workflow.rst
notebooks/: combined_sensitivity.ipynb  emissions_sensitivity.ipynb  ghg_fixed_diet_sensitivity.ipynb  grid_sensitivity.ipynb  grid_system_outcomes.ipynb  sensitivity_utils.py
notes/: global_consumption_reality_check.md  grain_shortfall_analysis.md  india_feed_slack_analysis.md  multi_output_surrogate_plan.md  sensitivity_parameter_selection.org  sherlock_workflow.org
tests/: conftest.py  test_baseline_diet.py  test_baseline_enforcement.py  test_biomass.py  test_build_current_grassland_area.py  test_build_model_utils.py  test_build_regions.py  test_calibration_provenance.py  test_categorize_feeds.py  (+58 more)
tools/snakemake-logger-plugin-compact/: pyproject.toml
tools/snakemake-logger-plugin-compact/snakemake_logger_plugin_compact/: __init__.py
(+544 files in other folders)
