# SPDX-FileCopyrightText: 2026 Koen van Greevenbroek
#
# SPDX-License-Identifier: GPL-3.0-or-later

# Minimal pyproject.toml to make workflow.scripts importable as a package.
# This allows Snakemake scripts in subdirectories to import shared modules
# using standard Python imports like `from workflow.scripts.constants import ...`
#
# All actual dependencies are managed by pixi.toml - this file only handles
# the editable install of the workflow package itself.

[project]
name = "glade-workflow"
dynamic = ["version"]
description = "GLADE model workflow scripts"
requires-python = ">=3.13"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Version is derived from pixi.toml (the single source of truth) via
# workflow.__version__; never hardcode a version literal here.
[tool.setuptools.dynamic]
version = { attr = "workflow.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["workflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: full Snakemake workflow integration tests",
    "plots: figure generation tests (optional, slow)",
]
