# SPDX-FileCopyrightText: 2026 Koen van Greevenbroek
#
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "snakemake-logger-plugin-compact"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["rich"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
